--- a/.gitconfig
+++ b/.gitconfig
@@ -1,45 +1,80 @@
-[filter "media"]
-	clean = git-media-clean %f
-	smudge = git-media-smudge %f
-
 [user]
-	name = Rahul Thakur
-	email = rahul.rkt@gmail.com
+	name = R
+	email = r@rahulthakur.me
 
 [core]
-	excludesfile = /Users/rahulthakur/.gitignore_global
+	excludesfile = ~/.gitignore_global
 
 [color]
- 	ui = auto
-
-[color "branch"]
-	current = yellow reverse
-	local = yellow
-	remote = green
+	ui = true
 
 [color "status"]
-	added = green     # Items that have been added to the index
-	changed = yellow  # Items that have been changed, but not added to the index
-	untracked = red   # Items that are untracked
+	header = normal dim
+	added = green bold
+	updated = yellow
+	changed = yellow
+	untracked = red bold
+	nobranch = red
+
+[color "grep"]
+	match = green bold
+
+[color "interactive"]
+	prompt = normal dim
+	header = green
+	help = blue
+	error = red bold
+
+[color "diff"]
+    meta = white dim black dim
+    frag = cyan bold
+	plain = normal dim
+	old = red
+	new = green
+	commit = yellow
+	whitespace = normal black dim
+
+[color "branch"]
+	current = green bold
+	local = magenta dim
+	remote = red dim
+	plain = normal dim
 
 [fetch]
 	prune = true
 
-[merge]
-	ff = true
-
 [push]
 	default = current
+
+[diff]
+    tool = meld
+
+[difftool]
+    prompt = false
+
+[difftool "meld"]
+    cmd = meld "$LOCAL" "$REMOTE" > /dev/null 2>&1
+
+[merge]
+	ff = true
+    conflictstyle = diff3
+    tool = meld
+
+[mergetool "meld"]
+    # cmd = meld "$BASE" "$LOCAL" "$MERGED" "$REMOTE" --output "$MERGED" > /dev/null 2>&1
+    cmd = meld --diff "$BASE" "$LOCAL" --diff "$BASE" "$REMOTE" --diff "$LOCAL" "$BASE" "$REMOTE" --output "$MERGED" > /dev/null 2>&1
+    trustExitCode = true
+
+[filter "media"]
+	clean = git-media-clean %f
+	smudge = git-media-smudge %f
 
 [filter "hawser"]
 	clean = git hawser clean %f
 	smudge = git hawser smudge %f
 	required = true
 
-[difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
-
-[mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+[filter "lfs"]
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
+	required = true
