--- a/.atom/.gitignore
+++ b/.atom/.gitignore
@@ -1,10 +1,10 @@
-.apm
-.node-gyp
-.npm
-atom-shell
-blob-store
-compile-cache
-dev
-packages
-recovery
-storage
+*
+
+!config.cson
+!init.coffee
+!keymap.cson
+!markdown-preview-plus.cson
+!packages.cson
+!projects.cson
+!snippets.cson
+!styles.less
