--- a/.nanorc
+++ b/.nanorc
@@ -1,8 +1,7 @@
 # -----------------------------------------------------------------------------
 #          FILE:  .nanorc
 #   DESCRIPTION:  Nano configuration file
-#        AUTHOR:  Rahul Thakur < rahulthakur.me | r@rahulthakur.me >
-#       VERSION:  1.0.0
+#        AUTHOR:  R
 # -----------------------------------------------------------------------------
 
 
