--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,7 @@
 # -----------------------------------------------------------------------------
 #          FILE:  .tmux.conf
 #   DESCRIPTION:  Tmux config file
-#        AUTHOR:  Rahul Thakur < rahulthakur.me | r@rahulthakur.me >
-#       VERSION:  1.0.0
+#        AUTHOR:  R
 # -----------------------------------------------------------------------------
 
 
